can login and logout

--- a/dashboard.html
+++ b/dashboard.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>this is a dashboard</h1>
+    <button type="button" id="employee_logout">Logout</button>
+
+    <script src="js/auth/employee_logout.js"></script>
 </body>
 </html>
