--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
               <div class="card-body p-5 text-start">
     
                 <h1 class="mb-5 fw-bold text-color text-center">Login - Employee</h1>
+                <div class="alert alert-danger d-none"></div>
 
-                <label class="form-label text-color" for="employeeID">Employee ID</label>
+                <form action="" id="employee_login">
+                  <label class="form-label text-color" for="employeeID">Employee ID</label>
                 <div class="input-group mb-4">
                   <span class="input-group-text border-input bg-transparent" id="user-icon">
                     <i class="fas fa-user text-color"></i>
                   </span>
-                  <input type="text" id="employeeID" class="form-control form-control-lg border-input text-color" aria-label="Employee ID" aria-describedby="user-icon" />
+                  <input type="text" id="employeeID" class="form-control form-control-lg border-input text-color" aria-label="Employee ID" aria-describedby="user-icon" autocomplete="off" />
                 </div>
     
                 <label class="form-label text-color" for="employeePassword">Password</label>
@@ -64,6 +66,7 @@
                 <div class="d-flex justify-content-center align-items-center">
                   <button class="btn btn-success btn-lg btn-block" type="submit">Login</button>
                 </div>
+                </form>
               </div>
             </div>
           </div>
@@ -88,5 +91,6 @@
         }
       });
     </script>
+    <script type="module" src="js/auth/employee_login.js"></script>
   </body>
 </html>
