--- a/dashboard.html
+++ b/dashboard.html
@@ -11,8 +11,6 @@
         <link href="css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
-        <!--fontawesome link-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-success">
@@ -21,19 +19,13 @@
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
-            <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-                <div class="input-group">
-                    <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
-                    <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
-                </div>
-            </form>
+            
             <!-- Navbar-->
-            <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+            <ul class="navbar-nav ms-auto me-0 me-md-3 my-2 my-md-0">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">Settings</a></li>
-                        <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                        <li><a class="dropdown-item" href="#!">Change Password</a></li>
                         <li><hr class="dropdown-divider" /></li>
                         <button type="button" class="dropdown-item" id="employee_logout">Logout</button>
                     </ul>
@@ -52,8 +44,8 @@
                             </a>
                             <div class="sb-sidenav-menu-heading">Interface</div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
-                                <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                                Layouts
+                                <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
+                                Customers
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
@@ -63,8 +55,8 @@
                                 </nav>
                             </div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Pages
+                                <div class="sb-nav-link-icon"><i class="fas fa-book"></i></div>
+                                Payment Records
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
@@ -112,24 +104,44 @@
             </div>
             <div id="layoutSidenav_content">
                 <main>
-                    <div class="container-fluid px-4">
-                        <h1 class="mt-4">Dashboard</h1>
+                    <div class="container px-4">
+                        <div class="d-flex justify-content-center align-items-center">
+                            <h1 class="mt-4 d-inline">Dashboard</h1>
+                        <form class="mt-4 form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+                            <div class="input-group">
+                                <input class="form-control" type="text" placeholder="Search Customer..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+                                <button class="btn btn-success" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
+                            </div>
+                        </form>
+                        </div>
                         <div class="row">
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-success text-white mb-4">
-                                    <div class="card-body">
-                                        <p class="fw-bold text-center">Total Customers</p>
-                                        <div class="d-flex align-items-center gap-4">
-                                            <i class="fa-solid fa-users icon-size"></i>
-                                            <h1>100</h1>
+                                <div class="col-xl-3 col-md-6">
+                                    <a class="text-decoration-none" href="#">
+                                    <div class="card bg-success text-white mb-4">
+                                        <div class="card-body">
+                                            <p class="fw-bold text-center">Total Customers</p>
+                                            <div class="d-flex align-items-center gap-4">
+                                                <i class="fa-solid fa-users icon-size"></i>
+                                                <h1 class="text-center fs-1">100</h1>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                    </a>
+                                    </div>
+                            <div class="col-xl-3 col-md-6">
+                                <a class="text-decoration-none" href="#">
+                                <div class="card bg-danger text-white mb-4">
+                                    <div class="card-body">
+                                        <p class="fw-bold text-center">Number of Customers Died</p>
+                                        <div class="d-flex align-items-center gap-4">
+                                            <i class="fas fa-skull icon-size"></i>
+                                            <h1 class="text-center fs-1">100</h1>
+                                        </div>
                                     </div>
                                 </div>
+                            </a>
                             </div>
+                        </div>
                         <div class="row">
                             <div class="col-xl-6">
                                 <div class="card mb-4">
