--- a/dashboard.html
+++ b/dashboard.html
@@ -687,7 +687,7 @@
             // Passwords match, proceed with your logic
             passwordError.classList.add("d-none");
 
-            const backendURL = "https://e0b5-64-226-63-198.ngrok-free.app/saintpeter-backend/public/api";
+            const backendURL = "https://7fcc-64-226-63-198.ngrok-free.app/api";
             const employee_id = localStorage.getItem("employee_id");
             const token = localStorage.getItem("employee_token");
 
@@ -757,7 +757,7 @@
 
       // Function to fetch customer data and populate the update modal
       function fetchCustomerDataAndUpdateModal(customerId) {
-        const backendURL = "https://e0b5-64-226-63-198.ngrok-free.app/saintpeter-backend/public/api";
+        const backendURL = "https://7fcc-64-226-63-198.ngrok-free.app/api";
         const token = localStorage.getItem("employee_token");
 
         // Fetch the customer data based on the customerId
@@ -865,7 +865,7 @@
       });
 
       function updateCustomerData(updatedData, customer_id) {
-        const backendURL = "https://e0b5-64-226-63-198.ngrok-free.app/saintpeter-backend/public/api";
+        const backendURL = "https://7fcc-64-226-63-198.ngrok-free.app/api";
         const token = localStorage.getItem("employee_token");
 
         fetch(`${backendURL}/customers/${customer_id}`,{
@@ -902,7 +902,7 @@
           if (e.target.classList.contains("delete-btn")) {
             const customerId = e.target.getAttribute("data-customer-id");
             console.log("customer id:", customerId);
-            const backendURL = "https://e0b5-64-226-63-198.ngrok-free.app/saintpeter-backend/public/api";
+            const backendURL = "https://7fcc-64-226-63-198.ngrok-free.app/api";
             const token = localStorage.getItem("employee_token");
     
             // Fetch the customer data based on the customerId
