add payment records

--- a/payment-records.html
+++ b/payment-records.html
@@ -9,7 +9,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Dashboard - Employee</title>
+    <title>Payment Records</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
@@ -206,7 +206,7 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container px-4">
-            <h1 class="mt-4">Dashboard</h1>
+            <h1 class="mt-4">Payment Records</h1>
 
             <div class="row">
               <div class="col-xl-3 col-md-6">
@@ -215,7 +215,7 @@
                     <div class="card-body">
                       <p class="fw-bold text-center">Total Customers</p>
                       <div class="d-flex align-items-center gap-4">
-                        <i class="fa-solid fa-users icon-size"></i>
+                        <i class="fa-solid fa-money-bill-wave icon-size"></i>
                         <h1 class="text-center fs-1" id="totalCustomersCount">
                           0
                         </h1>
@@ -522,7 +522,7 @@
       src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
       crossorigin="anonymous"
     ></script>
-    <script src="js/datatables-simple-demo.js"></script>
+    <script src="js/table.js"></script>
 
     <!-- script for age base on the birthday and current year, month, day -->
     <script>
