--- a/new-customer.html
+++ b/new-customer.html
@@ -570,7 +570,7 @@
             // Passwords match, proceed with your logic
             passwordError.classList.add("d-none");
 
-            const backendURL = "http://saintpeter-backend.test/api";
+            const backendURL = "https://7bde-112-198-99-31.ngrok-free.app/api";
             const employee_id = localStorage.getItem("employee_id");
             const token = localStorage.getItem("employee_token");
 
@@ -613,7 +613,7 @@
     <!-- script to fetch all the plans -->
     <script>
       document.addEventListener("DOMContentLoaded", function () {
-        const backendURL = "http://saintpeter-backend.test/api";
+        const backendURL = "https://7bde-112-198-99-31.ngrok-free.app/api";
         const token = localStorage.getItem("employee_token");
 
         fetch(`${backendURL}/plans`, {
@@ -649,7 +649,7 @@
 
               const img = document.createElement("img");
               img.classList.add("d-block", "w-100", "opacity-img");
-              img.src = `http://saintpeter-backend.test/storage/${item.plan_image}`;
+              img.src = `https://7bde-112-198-99-31.ngrok-free.app/storage/${item.plan_image}`;
 
               const carouselCaption = document.createElement("div");
               carouselCaption.classList.add("carousel-caption", "d-md-block");
@@ -743,7 +743,7 @@
           ) {
             alert("There are input fields that are empty!");
           } else {
-            const backendURL = "http://saintpeter-backend.test/api";
+            const backendURL = "https://7bde-112-198-99-31.ngrok-free.app/api";
             const token = localStorage.getItem("employee_token");
 
             fetch(`${backendURL}/customers`, {
