--- a/payment-page.html
+++ b/payment-page.html
@@ -421,7 +421,7 @@
             // Passwords match, proceed with your logic
             passwordError.classList.add("d-none");
 
-            const backendURL = "http://saintpeter-backend.test/api";
+            const backendURL = "https://7bde-112-198-99-31.ngrok-free.app/api";
             const employee_id = localStorage.getItem("employee_id");
             const token = localStorage.getItem("employee_token");
 
@@ -540,7 +540,7 @@
                     .trim()
                 );
 
-            const backendURL = "http://saintpeter-backend.test/api";
+            const backendURL = "https://7bde-112-198-99-31.ngrok-free.app/api";
             const token = localStorage.getItem("employee_token");
 
             fetch(`${backendURL}/payment`, {
