--- a/new-customer.html
+++ b/new-customer.html
@@ -649,7 +649,9 @@
 
               const img = document.createElement("img");
               img.classList.add("d-block", "w-100", "opacity-img");
-              img.src = `https://7bde-112-198-99-31.ngrok-free.app/storage/images/${item.plan_image}`;
+              // img.src = `https://7bde-112-198-99-31.ngrok-free.app/storage/images/${item.plan_image}`;
+              img.src = `{{ asset('storage/images/' . item.plan_image) }}`;
+
 
               const carouselCaption = document.createElement("div");
               carouselCaption.classList.add("carousel-caption", "d-md-block");
