--- a/new-customer.html
+++ b/new-customer.html
@@ -649,8 +649,11 @@
 
               const img = document.createElement("img");
               img.classList.add("d-block", "w-100", "opacity-img");
-              // img.src = `https://7bde-112-198-99-31.ngrok-free.app/storage/images/${item.plan_image}`;
-              img.src = `https://7bde-112-198-99-31.ngrok-free.app/storage/${item.plan_image}`;
+              img.src = `https://7bde-112-198-99-31.ngrok-free.app/${item.plan_image}`;
+
+              //img.src = `https://7bde-112-198-99-31.ngrok-free.app/storage/${item.plan_image}`;
+
+
 
 
 
