--- a/dashboard.html
+++ b/dashboard.html
@@ -642,7 +642,7 @@
             // Passwords match, proceed with your logic
             passwordError.classList.add("d-none");
 
-            const backendURL = "https://b1f9-112-198-99-46.ngrok-free.app/api";
+            const backendURL = "https://afb6-112-198-99-46.ngrok-free.app/api";
             const employee_id = localStorage.getItem("employee_id");
             const token = localStorage.getItem("employee_token");
 
@@ -712,7 +712,7 @@
 
       // Function to fetch customer data and populate the update modal
       function fetchCustomerDataAndUpdateModal(customerId) {
-        const backendURL = "https://b1f9-112-198-99-46.ngrok-free.app/api";
+        const backendURL = "https://afb6-112-198-99-46.ngrok-free.app/api";
         const token = localStorage.getItem("employee_token");
 
         // Fetch the customer data based on the customerId
@@ -820,7 +820,7 @@
       });
 
       function updateCustomerData(updatedData, customer_id) {
-        const backendURL = "https://b1f9-112-198-99-46.ngrok-free.app/api";
+        const backendURL = "https://afb6-112-198-99-46.ngrok-free.app/api";
         const token = localStorage.getItem("employee_token");
 
         fetch(`${backendURL}/customers/${customer_id}`,{
@@ -857,7 +857,7 @@
           if (e.target.classList.contains("delete-btn")) {
             const customerId = e.target.getAttribute("data-customer-id");
             console.log("customer id:", customerId);
-            const backendURL = "https://b1f9-112-198-99-46.ngrok-free.app/api";
+            const backendURL = "https://afb6-112-198-99-46.ngrok-free.app/api";
             const token = localStorage.getItem("employee_token");
     
             // Fetch the customer data based on the customerId
